--- a/assets/src/css/template-parts/masthead/_.scss
+++ b/assets/src/css/template-parts/masthead/_.scss
@@ -56,7 +56,7 @@
 
 
 	// if admin bar is visible, move us down a bit
-	@at-root body.admin-bar & {
+	body.admin-bar & {
 
 		top: 32px;
 		
